--- a/public/css/tabo-styles.css
+++ b/public/css/tabo-styles.css
@@ -62,6 +62,18 @@
     margin-left: 20px;
 }
 
+.portfolio-left-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    min-height: 300px;
+}
+
+.portfolio-photo-item {
+    padding: 0 10px 10px 10px;
+}
+
 @media (max-width: 480px) {
     
 }
