--- a/public/css/tabo-styles.css
+++ b/public/css/tabo-styles.css
@@ -62,6 +62,9 @@
     margin-left: 20px;
 }
 
+
+
+/** Photographer portfolio  */
 .portfolio-left-container {
     display: flex;
     justify-content: center;
@@ -73,6 +76,114 @@
 .portfolio-photo-item {
     padding: 0 10px 10px 10px;
 }
+
+#photo-preview {
+    width: 100%;
+    line-height: 0;
+    font-size: 0;
+}
+
+#photo-preview > div {
+    display: inline-block;
+    width: 167px;
+    height: 167px;
+    overflow: hidden;
+    position: relative;
+    margin: 0 5px 5px 0;
+}
+
+/*cover all size photo on gallery*/
+@media (max-width: 420px) {
+    #photo-preview > div {
+        width: 100%;
+        height: 167px;
+    }
+}
+@media (min-width: 421px) and (max-width: 548px) {
+    #photo-preview > div {
+        width: 48%;
+        height: 167px;
+    }
+}
+@media (min-width: 549px) and (max-width: 767px) {
+    #photo-preview > div {
+        width: 32%;
+        height: 160px;
+    }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+    #photo-preview > div {
+        width: 48%;
+        height: 167px;
+    }
+}
+@media (min-width: 992px) {
+    #photo-preview > div {
+        width: 31%;
+        height: 167px;
+    }
+}
+
+
+#photo-preview > div > img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+#photo-preview > div > i {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 18px;
+    font-style: normal;
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    color: #fff;
+    opacity: 0.7;
+}
+
+#photo-preview > div > i:hover {
+    opacity: 1;
+}
+
+#photo-preview > div > i:before {
+    font-family: FontAwesome;
+    content: '\f057';
+    text-align: center;
+    display: block;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+}
+
+.set-default-photo-profile-manager {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    left:0;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+    width: 100%;
+    height: 25px;
+    color: #fff;
+}
+
+span.set-default-photo-profile-manager {
+    cursor: default;
+}
+
+a.set-default-photo-profile-manager:hover {
+    color: #fff !important;
+}
+
+/******************** end photographer portfolio **************************/
+
+
 
 @media (max-width: 480px) {
     
